2001-06-22  Thomas E. Dickey  <dickey@clark.net>

	* install-sh: resync with my-autoconf

2001-01-09  Thomas E. Dickey  <dickey@clark.net>

	* src/copy/src/copy.c: add -a option

	* user/copy.man: add -a optio

2000-12-28  Thomas E. Dickey  <dickey@clark.net>

	* src/checkout/src/checkout.c:
	ugh: going to Slackware 7.1 (and Mandrake 7.1, at least), I had to recompile
	the rcs programs because they give me an unspecified "Permission denied"
	when doing co from checkout.  Recompiling makes that go away, but I'm left
	with co leaving the ,v file owned by root when checkout is setuid'd to root.
	So I tweaked that here.

2000-12-26  Thomas E. Dickey  <dickey@clark.net>

	* user/copy.man: omit dot-files
	remove comment about Apollo...

	* src/copy/src/copy.c: add -z option
	ooh: EVIL 'gets()' function (morons)

	* src/copy/src/copy.c:
	changes to make this more useful for mirroring (add -p option, make
	verboseness less for directory and integrate -u/-U)

	* user/copy.man: add -p option

	* aclocal.m4: resync with my-autoconf

2000-07-21  Thomas E. Dickey  <dickey@clark.net>

	* src/checkup/src/checkup.c:
	mods to support 'checkup -o' with $SCCS_VAULT

2000-01-24  Thomas E. Dickey  <dickey@clark.net>

	* aclocal.m4: resync with my-autoconf

	* src/checkup/src/checkup.c: use DirentT and Stat_t

1999-11-30  Thomas E. Dickey  <dickey@clark.net>

	* mkdirs.sh: update for OS/2

1999-06-27  Thomas E. Dickey  <dickey@clark.net>

	* src/link2rcs/test/case1.ref: add SCCS test-case

	* src/link2rcs/test/case2.ref: add SCCS-test-case

	* src/link2rcs/src/link2rcs.c:
	treat SCCS directories like RCS: make links to them

	* src/link2rcs/test/run_test.sh: add SCCS test-case

	* src/copy/src/copy.c, src/checkup/src/checkup.c, src/checkout/src/rcsget.c, src/checkout/src/checkout.c, src/checkin/src/rcsput.c, src/checkin/src/checkin.c, src/baseline/src/baseline.c:
	signed/unsigned-nits

1999-01-15  Thomas E. Dickey  <dickey@clark.net>

	* src/copy/src/copy.c: