@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t20010622
+MANIFEST for cm_tools, version t20010828
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
